[package]
name = "rusterslam"
version = "0.1.0"
authors = ["Romeo Valentin <rvalentin@student.ethz.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra="0.21.0"
itertools="0.9.0"
rand="0.7.3"
kdtree="0.6.0"
regex="1"
